--- a/_config.yml
+++ b/_config.yml
@@ -1,17 +1,18 @@
-name: Your New Jekyll Site
-description: Blogging about stuffs
-meta_description: "Your New Jekyll Site, Blogging about stuffs"
+name: Woman. Legend. Blog.
+description: American cynicism. Russian fatalism. Nutella. 
+meta_description: "My blog. "
 
 markdown: kramdown
-highlighter: rogue
+highlighter: rouge
 logo: false
 paginate: 15
 baseurl: /wlb
-domain_name: 'http://yourblog-domain.com'
-google_analytics: 'UA-XXXXXXXX-X'
+domain_name: 'http://veekaybee.github.com'
+google_analytics: 'UA-74036868-1'
 gems: [jekyll-paginate]
 site-url: /
+comments: true
 
 # Details for the RSS feed generator
-url:            'blog url'
+url:            'Woman.Legend.Blog'
 author:         'Your Name'
